docs/examples/valid/extension/break-continue/basicBreak.wacc
begin
	int i = 0;
	while i < 3 do
		i = i+1;
		break;
		println 0
	done;
	println i
end

