docs/examples/invalid/semanticErr/extension/break-continue/semanticErrorBreak.wacc
begin
	int i = 0;
	break
end
